# alienchat

./: .gitignore  Cargo.toml  README.md
src/: chatserver.rs  cmdarguments.rs  controller.rs  database.rs  external_data_source.rs  main.rs  mock_data.rs  role.rs  room.rs  room_controller.rs  user.rs  utils.rs  websocket.rs
src/actors/: chatserver.rs  mod.rs  websocket.rs
